fix layout issue

--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -10,8 +10,9 @@
   top: 0px;
   left:0;
   width: 100%;
-  border-bottom:solid 1px $mandarin;
+  // border-bottom:solid 1px $mandarin;
   z-index: 1;
+  box-shadow: 0 0px 9px -3px grey;
 
   h1{
     color: $mandarin;
